--- a/package.json
+++ b/package.json
@@ -13,31 +13,35 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "3.18.0",
-    "@tensorflow/tfjs-vis": "^1.4.3"
+    "@tensorflow/tfjs-vis": "^1.4.3",
+    "acorn-walk": "^8.2.0",
+    "escodegen": "^2.0.0",
+    "esprima": "^4.0.1",
+    "fs-extra": "^10.1.0"
   },
   "devDependencies": {
-    "@types/node": "~17.0.23",
-    "@types/shelljs": "~0.8.11",
-    "fs": "~0.0.1-security",
-    "jasmine": "~3.10.0",
-    "ts-node": "~10.8.1",
-    "tslint": "~6.1.3",
-    "tslint-no-circular-imports": "~0.7.0",
-    "typescript": "4.7.3",
     "@babel/core": "7.18.2",
     "@babel/node": "7.17.10",
     "@babel/preset-env": "7.18.2",
     "@tensorflow/tfjs-node": "3.18.0",
     "@tensorflow/tfjs-node-gpu": "3.18.0",
+    "@types/node": "~17.0.23",
+    "@types/shelljs": "~0.8.11",
     "argparse": "^1.0.10",
     "buffer": "^6.0.3",
     "clang-format": "~1.2.2",
     "cross-env": "^5.1.6",
+    "fs": "~0.0.1-security",
+    "jasmine": "~3.10.0",
     "jasmine-core": "^3.2.1",
     "parcel": "~2.3.2",
     "process": "^0.11.10",
     "shelljs": "^0.8.5",
     "tmp": "^0.0.33",
+    "ts-node": "~10.8.1",
+    "tslint": "~6.1.3",
+    "tslint-no-circular-imports": "~0.7.0",
+    "typescript": "4.7.3",
     "yalc": "~1.0.0-pre.53"
   },
   "resolutions": {
