--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "acorn-walk": "^8.2.0",
     "escodegen": "^2.0.0",
     "esprima": "^4.0.1",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "openai": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
