--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "escodegen": "^2.0.0",
     "esprima": "^4.0.1",
     "fs-extra": "^10.1.0",
+    "lodash": "^4.17.21",
     "openai": "^3.0.0"
   },
   "devDependencies": {
